# CowSwap

./: .coverage  Makefile  Readme.md  config.yml  main.py  pyproject.toml
cow_swap/: price_calculation.py  processor.py  utils.py
cow_swap/apis/: api_client.py  dune_fetcher.py
cow_swap/database/: db_provider.py
dags/: daily_pipeline.py
tests/: test_price_calculation.py  test_processor.py  test_utils.py
tests/apis/: test_api_client.py  test_data_fetcher.py
tests/database/: test_db_provider.py
